gccida/c3/extract_constrain_insn_cached
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_constrain_insn_cached/src/recog.c:2521:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.insn != insn || insn[2].fld[0].rtint < 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_constrain_insn_cached/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_constrain_insn_cached/src/recog.c:2524:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.insn = insn; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_constrain_insn_cached/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_constrain_insn_cached/src/recog.c:2527:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "recog.c", 2063, "extract_constrain_insn_cached"); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_constrain_insn_cached/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_constrain_insn_cached/src/recog.c:2527:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "recog.c", 2063, "extract_constrain_insn_cached"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_constrain_insn_cached/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/extract_constrain_insn_cached/src/obj/recog.o] Error 1
